docs: update task assignment

--- a/docs/分工说明与优化任务分配.md
+++ b/docs/分工说明与优化任务分配.md
@@ -216,7 +216,13 @@ Agent 层（会话状态、工具调用、RAG、综述生成）
 - 可用的「入库新文件」页面；与 ljy 后端联调通过；简要使用说明（可并入现有「使用说明」）。
 
 ---
+### 5.3 任务 3：优化现有界面（尤其是页面二、页面三）
 
+**目标**：页面三在LRH的视频中![alt text](1bab5994e70fb920af7e615bc5e1a65e.jpg)如图做的功能比较好，可以延续、完善
+
+**交付物**：
+
+- 确保页面正常可用，功能完善美观；与后端联调通过；简要使用说明（可并入现有「使用说明」）。
 
 
 ## 六、依赖关系与建议顺序
@@ -224,7 +230,5 @@ Agent 层（会话状态、工具调用、RAG、综述生成）
 1. **ljy**：先完成 PDF/元数据优化与入库 API 设计（至少接口定稿），再与 LRH 联调入库页面。
 2. **JX**：可与 ljy 并行推进；关键词与结构化摘要优化尽早交付，便于前端与 RAG 使用；聚类与主题名、共现/趋势等可紧随其后。
 3. **LRH**：前端展示优化可与 JX 的字段变更同步；入库页面依赖 ljy 的 API 定稿后实现与联调。
-
-
 
 以上分工与验收清单可根据实际开发进度做小幅调整，调整时请更新本文档并同步到仓库。注意！每个人都在自己的GitHub分支上更新代码，等确认代码无误后在拉到主线上。
